--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -1,3 +1,5 @@
+- id: bottom_navigation
+  translation: "Déjà fini? Essayez:"
 - id: share_buttons_title
   translation: Partager sur les réseaux sociaux
 - id: reading_time_singular
