--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -3,7 +3,7 @@
 - id: share_buttons_title
   translation: Share this page on social networks
 - id: reading_time_singular
-  translation: "Reading time: {{ . }} minute approximately"
+  translation: "Reading time: 1 minute approximately"
 - id: reading_time_plural
   translation: "Reading time: {{ . }} minutes approximately"
 - id: Add an issue
