--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -3,7 +3,7 @@
 - id: share_buttons_title
   translation: Partager sur les réseaux sociaux
 - id: reading_time_singular
-  translation: "Temps de lecture: {{ . }} minute environ"
+  translation: "Temps de lecture: 1 minute environ"
 - id: reading_time_plural
   translation: "Temps de lecture: {{ . }} minutes environ"
 - id: Add an issue
